mudança no cursor
Quando o cursor está em cima da alguma carta, ele muda para indicar que pode clicar

--- a/estilo.css
+++ b/estilo.css
@@ -30,6 +30,10 @@ body {
     transform: scale(1);
 }
 
+.cartas:hover {
+    cursor: pointer;
+}
+
 .cartas:active {
     transform: scale(.95);
     /*transition para deixar o efeito mais suave*/
